# ExpenseTracker

./: .gitignore  pyproject.toml
app/: expense_tracker.db  main.py
app/api/routes/: expenses.py  user.py
app/core/: config.py  security.py
app/db/: base.py  database.py
app/models/: expense.py  user.py
app/schemas/: expense.py  user.py
app/services/: expense_service.py  user_service.py
flet-frontend/: README.md  pyproject.toml
flet-frontend/src/: main.py
flet-frontend/src/services/: api.py
flet-frontend/src/views/: dashboard.py  login.py  register.py
frontend/: app.py
frontend/pages/: login.py
frontend/utils/: auth.py
